--- a/stylesheets/screen19.css
+++ b/stylesheets/screen19.css
@@ -64,7 +64,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 3, ../sass/screen14.scss */
+/* line 3, ../sass/screen19.scss */
 html, body {
   font-size: 15px;
   line-height: 1.4;
@@ -72,7 +72,7 @@ html, body {
   font-family: "utopia-std", "Times New Roman", serif;
 }
 
-/* line 10, ../sass/screen14.scss */
+/* line 10, ../sass/screen19.scss */
 body {
   background: #ff6b94;
   /* fallback for old browsers */
@@ -124,7 +124,7 @@ working from https://codepen.io/valhead/pen/ByRaBd
 /* *************************
         TYPOGRAPHY
 ************************* */
-/* line 55, ../sass/screen14.scss */
+/* line 55, ../sass/screen19.scss */
 h1, .h1 {
   font-size: 48px;
   line-height: 1.2;
@@ -134,12 +134,12 @@ h1, .h1 {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* line 64, ../sass/screen14.scss */
+/* line 64, ../sass/screen19.scss */
 strong {
   font-weight: bold;
 }
 
-/* line 68, ../sass/screen14.scss */
+/* line 68, ../sass/screen19.scss */
 p {
   font-size: 22px;
   font-weight: 400;
@@ -147,14 +147,14 @@ p {
   margin-bottom: 20px;
 }
 
-/* line 75, ../sass/screen14.scss */
+/* line 75, ../sass/screen19.scss */
 .intro {
   margin-top: -45px;
   display: block;
   margin-bottom: 20px;
 }
 
-/* line 81, ../sass/screen14.scss */
+/* line 81, ../sass/screen19.scss */
 .solution-intro {
   display: block;
   margin-bottom: 20px;
@@ -165,7 +165,7 @@ p {
   letter-spacing: 1px;
 }
 
-/* line 91, ../sass/screen14.scss */
+/* line 91, ../sass/screen19.scss */
 .caption-label {
   text-transform: uppercase;
   color: #b1b1b1;
@@ -177,7 +177,7 @@ p {
   font-weight: 700;
 }
 
-/* line 102, ../sass/screen14.scss */
+/* line 102, ../sass/screen19.scss */
 .fine-print {
   font-family: "Hevetica Neue", helvetica, sans-serif;
   font-size: 13px;
@@ -186,7 +186,7 @@ p {
   margin-top: 30px;
 }
 
-/* line 110, ../sass/screen14.scss */
+/* line 110, ../sass/screen19.scss */
 .superscript {
   vertical-align: super;
   opacity: 0.4;
@@ -196,7 +196,7 @@ p {
 /* *************************
          CONTAINERS
 ************************* */
-/* line 121, ../sass/screen14.scss */
+/* line 121, ../sass/screen19.scss */
 .wrapper {
   max-width: 900px;
   margin: 50px auto;
@@ -207,7 +207,7 @@ p {
   height: 80vh;
 }
 
-/* line 131, ../sass/screen14.scss */
+/* line 131, ../sass/screen19.scss */
 .main-section {
   height: 50vh;
   max-height: 50vh;
@@ -216,12 +216,12 @@ p {
   border: 1px solid transparent;
 }
 
-/* line 139, ../sass/screen14.scss */
+/* line 139, ../sass/screen19.scss */
 .hidden {
   display: none;
 }
 
-/* line 143, ../sass/screen14.scss */
+/* line 143, ../sass/screen19.scss */
 .problem-statement-holder,
 .consideration-holder,
 .solution-statement-holder {
@@ -231,7 +231,7 @@ p {
 /* *************************
           BUTTONS
 ************************* */
-/* line 153, ../sass/screen14.scss */
+/* line 153, ../sass/screen19.scss */
 .buttons {
   position: absolute;
   bottom: 80px;
@@ -239,13 +239,13 @@ p {
   text-align: center;
   width: calc(100% - 50px);
 }
-/* line 160, ../sass/screen14.scss */
+/* line 160, ../sass/screen19.scss */
 .buttons p {
   font-size: 16px;
   margin-top: 15px;
 }
 
-/* line 166, ../sass/screen14.scss */
+/* line 166, ../sass/screen19.scss */
 button, .button {
   display: inline-block;
   font-size: 17px;
@@ -262,14 +262,14 @@ button, .button {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-/* line 182, ../sass/screen14.scss */
+/* line 182, ../sass/screen19.scss */
 button:first-of-type, .button:first-of-type {
   border: 4px solid white;
   background-color: transparent;
   color: white;
 }
 
-/* line 189, ../sass/screen14.scss */
+/* line 189, ../sass/screen19.scss */
 :focus {
   outline: #009df8 auto 3px;
   outline-color: #009df8;
@@ -278,16 +278,16 @@ button:first-of-type, .button:first-of-type {
   box-shadow: 0px 0px 7px #9B2450;
 }
 
-/* line 197, ../sass/screen14.scss */
+/* line 197, ../sass/screen19.scss */
 .problem-buttons,
 .consideration-buttons,
 .again-buttons {
   display: none;
 }
 
-/* line 203, ../sass/screen14.scss */
+/* line 203, ../sass/screen19.scss */
 .reset-button {
-  display: block;
+  display: inline-block;
   margin-top: 20px;
   font-size: 17px;
   color: white;
@@ -298,11 +298,11 @@ button:first-of-type, .button:first-of-type {
 /* *************************
    PROBLEM-SPECIFIC STUFF
 ************************* */
-/* line 217, ../sass/screen14.scss */
+/* line 217, ../sass/screen19.scss */
 .problem-statement {
   margin-top: 50px;
 }
-/* line 219, ../sass/screen14.scss */
+/* line 219, ../sass/screen19.scss */
 .problem-statement .the-emotions {
   display: block;
   margin-top: 20px;
@@ -311,18 +311,18 @@ button:first-of-type, .button:first-of-type {
 /* *************************
 CONSIDERATION-SPECIFIC STUFF
 ************************* */
-/* line 230, ../sass/screen14.scss */
+/* line 230, ../sass/screen19.scss */
 .the-considerations {
   margin-bottom: 20px;
 }
 
-/* line 234, ../sass/screen14.scss */
+/* line 234, ../sass/screen19.scss */
 .the-evidence {
   font-size: 22px;
   font-weight: 400;
   margin-bottom: 20px;
 }
-/* line 239, ../sass/screen14.scss */
+/* line 239, ../sass/screen19.scss */
 .the-evidence strong {
   font-family: "Hevetica Neue", helvetica, sans-serif;
   font-weight: 700;
@@ -330,7 +330,7 @@ CONSIDERATION-SPECIFIC STUFF
   font-size: 20px;
 }
 
-/* line 247, ../sass/screen14.scss */
+/* line 247, ../sass/screen19.scss */
 .evidence-card {
   background: white;
   padding: 20px 20px 35px;
@@ -339,11 +339,11 @@ CONSIDERATION-SPECIFIC STUFF
   border-radius: 8px;
   box-shadow: 0 1px 3px 1px rgba(60, 64, 67, 0.2), 0 2px 8px 4px rgba(60, 64, 67, 0.1);
 }
-/* line 255, ../sass/screen14.scss */
+/* line 255, ../sass/screen19.scss */
 .evidence-card p {
   color: #444444;
 }
-/* line 259, ../sass/screen14.scss */
+/* line 259, ../sass/screen19.scss */
 .evidence-card.animate {
   animation: slideIn 0.65s cubic-bezier(0.175, 0.885, 0.32, 1.275) both, fadeIn 0.25s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
@@ -351,7 +351,7 @@ CONSIDERATION-SPECIFIC STUFF
 /* *************************
   SOLUTIONS-SPECIFIC STUFF
 ************************* */
-/* line 272, ../sass/screen14.scss */
+/* line 272, ../sass/screen19.scss */
 .solution-statement p.h1:after {
   content: '™';
   vertical-align: top;
@@ -359,7 +359,7 @@ CONSIDERATION-SPECIFIC STUFF
   font-weight: 400;
 }
 
-/* line 281, ../sass/screen14.scss */
+/* line 281, ../sass/screen19.scss */
 .solution-card {
   border-radius: 8px;
   box-shadow: 4px 6px 24px 10px rgba(60, 64, 67, 0.08), 0 2px 8px 4px rgba(60, 64, 67, 0.08);
@@ -370,18 +370,18 @@ CONSIDERATION-SPECIFIC STUFF
   height: auto;
 }
 
-/* line 291, ../sass/screen14.scss */
+/* line 291, ../sass/screen19.scss */
 .the-follow-up {
   font-size: 18px;
   font-style: inherit;
   display: block;
   margin-top: 40px;
 }
-/* line 297, ../sass/screen14.scss */
+/* line 297, ../sass/screen19.scss */
 .the-follow-up a {
   color: white;
 }
-/* line 301, ../sass/screen14.scss */
+/* line 301, ../sass/screen19.scss */
 .the-follow-up .coupon-code strong,
 .the-follow-up span.social-account,
 .the-follow-up .to-thirty {
@@ -390,33 +390,71 @@ CONSIDERATION-SPECIFIC STUFF
   font-size: 18px;
   font-style: initial;
 }
-/* line 310, ../sass/screen14.scss */
+/* line 310, ../sass/screen19.scss */
 .the-follow-up .emoji {
   font-style: initial;
   vertical-align: middle;
   font-size: 1.7rem;
 }
 
-/* line 317, ../sass/screen14.scss */
+/* line 317, ../sass/screen19.scss */
 .at-resp-share-element .at-share-btn {
   margin: 0 4px 5px;
 }
 
+/* line 321, ../sass/screen19.scss */
+.tooltip {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  opacity: 0.4;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+}
+/* line 330, ../sass/screen19.scss */
+.tooltip:hover {
+  opacity: 0.8;
+}
+
+/* line 335, ../sass/screen19.scss */
+.credits {
+  width: calc(100% - 30px);
+  background: #ab2755;
+  bottom: 0;
+  color: rgba(255, 255, 255, 0.5);
+  position: fixed;
+  left: 0;
+  padding: 20px 15px;
+  display: none;
+  font-size: 14px;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 4px 6px 24px 10px rgba(60, 64, 67, 0.08), 0 2px 8px 4px rgba(60, 64, 67, 0.08);
+  font-family: sans-serif;
+  -webkit-font-smoothing: antialiased;
+  font-weight: 600;
+}
+/* line 352, ../sass/screen19.scss */
+.credits a {
+  color: rgba(255, 255, 255, 0.8);
+}
+
 /* *************************
-  Mobile Styles
+        Mobile Styles
 ************************* */
 @media screen and (max-width: 667px) {
-  /* line 327, ../sass/screen14.scss */
+  /* line 363, ../sass/screen19.scss */
   h1, .h1 {
     font-size: 36px;
   }
 
-  /* line 330, ../sass/screen14.scss */
+  /* line 366, ../sass/screen19.scss */
   .main-section {
     margin-top: 0px;
     max-height: inherit;
     height: auto;
-    min-height: 450px;
+    min-height: 430px;
     display: flex;
     justify-content: center;
     /* align horizontal */
@@ -424,91 +462,93 @@ CONSIDERATION-SPECIFIC STUFF
     /* align vertical */
   }
 
-  /* line 339, ../sass/screen14.scss */
+  /* line 375, ../sass/screen19.scss */
   .problem-statement {
     margin-top: 1vh;
   }
 
-  /* line 342, ../sass/screen14.scss */
+  /* line 378, ../sass/screen19.scss */
   .buttons {
     position: relative;
     width: 100%;
     bottom: 0;
   }
 
-  /* line 347, ../sass/screen14.scss */
+  /* line 383, ../sass/screen19.scss */
   .wrapper {
     padding: 0 25px 20px;
     padding-top: 0;
     margin: 20px auto;
+    height: inherit;
+    min-height: 80vh;
   }
 
-  /* line 352, ../sass/screen14.scss */
+  /* line 390, ../sass/screen19.scss */
   .intro {
     font-size: 18px;
   }
 
-  /* line 355, ../sass/screen14.scss */
+  /* line 393, ../sass/screen19.scss */
   .consideration-element {
     margin-top: 2.5vh;
   }
 
-  /* line 358, ../sass/screen14.scss */
+  /* line 396, ../sass/screen19.scss */
   .fine-print {
     margin-top: 15px;
   }
 
-  /* line 361, ../sass/screen14.scss */
+  /* line 399, ../sass/screen19.scss */
   .the-evidence {
     font-size: 20px;
   }
 
-  /* line 364, ../sass/screen14.scss */
+  /* line 402, ../sass/screen19.scss */
   .solution-element {
     margin-top: 0;
   }
-  /* line 366, ../sass/screen14.scss */
+  /* line 404, ../sass/screen19.scss */
   .solution-element .emoji {
     display: block;
     margin-top: 10px;
   }
 
-  /* line 371, ../sass/screen14.scss */
+  /* line 409, ../sass/screen19.scss */
   .solution-statement .h1 {
     font-size: 34px;
   }
 
-  /* line 374, ../sass/screen14.scss */
+  /* line 412, ../sass/screen19.scss */
   .solution-card {
     padding: 40px 15px 15px;
   }
-  /* line 376, ../sass/screen14.scss */
+  /* line 414, ../sass/screen19.scss */
   .solution-card p {
     margin-bottom: 0;
   }
 
-  /* line 380, ../sass/screen14.scss */
+  /* line 418, ../sass/screen19.scss */
   .solution-intro {
     font-size: 15px;
   }
 
-  /* line 383, ../sass/screen14.scss */
+  /* line 421, ../sass/screen19.scss */
   .the-follow-up {
     font-size: 17px;
   }
-  /* line 386, ../sass/screen14.scss */
+  /* line 424, ../sass/screen19.scss */
   .the-follow-up .coupon-code strong,
   .the-follow-up span.social-account,
   .the-follow-up .to-thirty {
     font-size: 18px;
   }
 
-  /* line 392, ../sass/screen14.scss */
+  /* line 430, ../sass/screen19.scss */
   .solution-card {
     padding: 50px 20px 20px;
   }
 
-  /* line 396, ../sass/screen14.scss */
+  /* line 434, ../sass/screen19.scss */
   button, .button {
     display: inline-block;
     font-size: 14px;
@@ -516,59 +556,65 @@ CONSIDERATION-SPECIFIC STUFF
     padding: 5px 25px;
   }
 
-  /* line 402, ../sass/screen14.scss */
+  /* line 440, ../sass/screen19.scss */
   .reset-button {
     font-size: 16px;
   }
+
+  /* line 443, ../sass/screen19.scss */
+  .tooltip {
+    bottom: 15px;
+    right: 15px;
+  }
 }
 @media screen and (max-width: 320px) {
-  /* line 408, ../sass/screen14.scss */
+  /* line 450, ../sass/screen19.scss */
   .main-section {
     min-height: 400px;
   }
 
-  /* line 411, ../sass/screen14.scss */
+  /* line 453, ../sass/screen19.scss */
   h1, .h1 {
     font-size: 32px;
   }
 
-  /* line 415, ../sass/screen14.scss */
+  /* line 457, ../sass/screen19.scss */
   .wrapper {
     padding: 0 20px 25px;
   }
 
-  /* line 418, ../sass/screen14.scss */
+  /* line 460, ../sass/screen19.scss */
   .caption-label {
     font-size: 15px;
   }
 
-  /* line 421, ../sass/screen14.scss */
+  /* line 463, ../sass/screen19.scss */
   .the-evidence {
     font-size: 18px;
   }
 
-  /* line 424, ../sass/screen14.scss */
+  /* line 466, ../sass/screen19.scss */
   .solution-intro {
     font-size: 13px;
   }
 
-  /* line 427, ../sass/screen14.scss */
+  /* line 469, ../sass/screen19.scss */
   .solution-statement .h1 {
     font-size: 30px;
   }
 
-  /* line 430, ../sass/screen14.scss */
+  /* line 472, ../sass/screen19.scss */
   .the-follow-up {
     font-size: 15px;
   }
-  /* line 432, ../sass/screen14.scss */
+  /* line 474, ../sass/screen19.scss */
   .the-follow-up .coupon-code strong,
   .the-follow-up span.social-account,
   .the-follow-up .to-thirty {
     font-size: 15px;
   }
 
-  /* line 438, ../sass/screen14.scss */
+  /* line 480, ../sass/screen19.scss */
   button, .button {
     display: inline-block;
     font-size: 13px;
@@ -576,7 +622,7 @@ CONSIDERATION-SPECIFIC STUFF
     padding: 4px 15px;
   }
 
-  /* line 444, ../sass/screen14.scss */
+  /* line 486, ../sass/screen19.scss */
   .reset-button {
     font-size: 15px;
   }
