--- a/sass/screen19.scss
+++ b/sass/screen19.scss
@@ -114,6 +114,7 @@ p {
 }
 
 
+
 /* *************************
          CONTAINERS
 ************************* */
@@ -207,6 +208,64 @@ button, .button {
 	color: white;
 	font-family: "Hevetica Neue", helvetica, sans-serif;
 	text-decoration: none;
+}
+
+
+/* *************************
+   		LOADER
+************************* */
+
+
+
+#loader-container {
+  width: 200px;
+  height: 200px;
+  color: white;
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  border: 5px solid #3498db;
+  border-radius: 50%;
+  -webkit-animation: borderScale 1s infinite ease-in-out;
+  animation: borderScale 1s infinite ease-in-out;
+}
+
+#loadingText {
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 22px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+@-webkit-keyframes borderScale {
+  0% {
+    border: 5px solid white;
+  }
+  50% {
+    border: 25px solid transparent;
+  }
+  100% {
+    border: 5px solid white;
+  }
+}
+
+@keyframes borderScale {
+  0% {
+    border: 5px solid white;
+  }
+  50% {
+    border: 25px solid transparent;
+  }
+  100% {
+    border: 5px solid white;
+  }
 }
 
 
